= 0.0.30 2007-04-21

* Small style tweaks, make header smaller

= 0.0.29 2007-04-15

* Support Unicode wikiwords. Thanks Julian Tarkhanov
* Disable suprious warnings when running tests.  Thanks Julian Tarkhanov
* Css tweak to prevent overflow in pre tags. Thanks Leslie Viljoen

= 0.0.28 2007-01-20

* Fix uninitialized constant Mongrel::Camping error
* Fix rails 2 deprecation warnings on startup
* Added search based on Barry Arthur's work.  Thanks Barry!

= 0.0.27 2006-12-18

* Quick bugfix release

= 0.0.26 2006-12-18

* Feed cleanup, fixes id issue with google reader
* Removed dependency on Redcloth.  Added latest (128) revision of Redcloth to ext dir to fix autolinking issue.

= 0.0.25 2006-12-01

* Feed page url wrong.  Fixes #6983. Thanks Robert Gogolok
* Don't show diff link for version < 1 in feed.  Fixes ##6984. Thanks Robert Gogolok

= 0.0.24 2006-11-29

* Accesskey attributes added for edit(e) and save(s).  Thanks willcodeforfoo!
* Edit form tweaks

= 0.0.23 2006-11-28

* *EXISTING USERS PLEASE READ THE RELEASE NOTES*
* Cleaned up redirect handling
* Renamed 'url' config parameter to 'feedurl'
* Make edit button always visible
* Fix for camping error on initial load
* Allow dashes in wikiwords
* More tests

= 0.0.22 2006-11-28

* *EXISTING USERS PLEASE READ THE RELEASE NOTES*
* Data dump improvements
* Removed yahoo grids (weren't using them), page structure simplification
* Changed page naming convention (underscores in url, spaces in title and db) 
* Changed header format to help avoid title duplication in text

= 0.0.21 2006-11-26

* *EXISTING USERS PLEASE READ THE RELEASE NOTES*
* INT and TERM signals handling -- Thanks zimbatm!
* Support for databases other than sqlite3 -- Thanks Robert Gogolok

= 0.0.20 2006-11-23

* Rake task to update local documentation (rake update:help)
* Documentation updates
* Version bugfix. Thanks DJ

= 0.0.19 2006-11-22

* *BE SURE TO READ THE RELEASE NOTES*
* 'Recent Pages' page improvements
* Atom feed improvements